src/objects/MAP__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MAP/PARs</relationshipLabel>
        <relationshipName>MAPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MAP/PARs</relationshipLabel>
        <relationshipName>MAPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAPProdOrg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Organization</label>
        <referenceTo>Product_Organization__c</referenceTo>
        <relationshipLabel>MAP/PARs</relationshipLabel>
        <relationshipName>MAPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MAP/PARs</relationshipLabel>
        <relationshipName>MAPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>MAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isPARRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPARRequest</label>
        <type>Checkbox</type>
    </fields>
    <label>MAP/PAR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAP-{0000}</displayFormat>
        <label>Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MAP/PARs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>